set new z-index to header, so that it is behind search overlay.Resolves #286.

--- a/css/goldenlayout.css
+++ b/css/goldenlayout.css
@@ -27,3 +27,6 @@
   background-color:black;
   border-bottom:1px solid #ff2e88
 }
+.lm_header{
+  z-index: 0
+}
